Fix overflow issue, refactor header

--- a/src/components/SiteHeader/SiteHeaderNav.scss
+++ b/src/components/SiteHeader/SiteHeaderNav.scss
@@ -55,7 +55,7 @@
 		background-color: var(--color-header-nav-bg);
 		color: var(--color-header-nav-fg);
 		font-family: var(--font-button);
-		font-size: 0.8rem;
+		font-size: 0.9rem;
 		font-weight: 600;
 		text-decoration: none;
 		text-transform: uppercase;
