--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -67,7 +67,7 @@
 }
 
 // -- Alternate Theme (light) --
-:root.light {
+:root.lightmode {
 	// content
 	--color-content-bg: #ffffff;
 	--color-content-fg: #000;
